test/types/typedefs/arrays/loop-expr-ind.chpl

type T = [i in 1..10] (i.type, i.type);
var A : T;
writeln(A);
